# zed

./: Cargo.toml
crates/jj/: Cargo.toml
crates/jj/src/: jj.rs
crates/jj_ui/: Cargo.toml
crates/jj_ui/src/: jj_panel.rs  jj_ui.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
