[package]
name = "jj_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/jj_ui.rs"

[dependencies]
anyhow.workspace = true
collections.workspace = true
editor.workspace = true
git_ui.workspace = true
gpui.workspace = true
jj.workspace = true
log.workspace = true
project.workspace = true
serde.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
